# memoryd

./: .gitignore  Cargo.toml  README.md  memoryd.toml
crates/consolidation/: Cargo.toml
crates/consolidation/src/: extractive.rs  lib.rs  openai.rs
crates/signals/: Cargo.toml
crates/signals/src/: lib.rs
crates/spikes/: Cargo.toml
crates/store/: Cargo.toml
crates/store/src/: google_embed.rs  lib.rs
docker/: docker-compose.yml  init.sql
docs/: memoryd-product-overview.md
scripts/: smoke_memchat.py
src/: lib.rs
