[workspace]
members = ["crates/signals", "crates/spikes", "crates/store", "crates/consolidation"]

[package]
name = "memoryd"
version = "0.1.0"
edition = "2021"

[lib]
name = "memoryd"
path = "src/lib.rs"

[[bin]]
name = "locomo_eval"
path = "src/bin/locomo_eval.rs"

[[bin]]
name = "memoryd"
path = "src/bin/memoryd.rs"

[[bin]]
name = "longmemeval_qa"
path = "src/bin/longmemeval_qa.rs"

[[bin]]
name = "memplay"
path = "src/bin/memplay.rs"

[[bin]]
name = "memchat"
path = "src/bin/memchat.rs"

[dependencies]
# zlib-rs: pure-Rust zlib port. Byte-identical to reference zlib (and thus
# TrueMemory's Python gzip) to within a 1-byte zlib-version artifact, while
# keeping the single-static-binary goal (no C dependency).
flate2        = { version = "1", default-features = false, features = ["zlib-rs"] }
serde_json    = "1"
signals       = { path = "crates/signals" }
# CLI + M5 consolidation
store         = { path = "crates/store" }
consolidation = { path = "crates/consolidation" }
clap          = { version = "4", features = ["derive"] }
tokio         = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
anyhow        = "1"
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ratatui       = "0.29"
crossterm     = "0.28"

[profile.release]
opt-level = 3
